--- a/pubs.bib
+++ b/pubs.bib
@@ -1,34 +1,32 @@
- @article{1Meston_2023, title={Psychometric Evaluation and Adaptation of the Five-Factor Sexual Satisfaction Scale (SSS-W) for Use in Men: The Sexual Satisfaction Scale (SSS)}, ISSN={1521-0715}, url={http://dx.doi.org/10.1080/0092623x.2023.2270205}, DOI={10.1080/0092623x.2023.2270205}, journal={Journal of Sex &amp; Marital Therapy}, publisher={Informa UK Limited}, author={Meston, Cindy M. and Freihart, Bridget K. and Crosby, Courtney L. and Stephenson, Kyle R. and Trapnell, Paul D.}, year={2023}, month=oct, pages={1–14} }
+ @article{1Beebe_2024, title={Mother-infant self- and interactive contingency at four months and infant cognition at one year: A view from microanalysis}, volume={74}, ISSN={0163-6383}, url={http://dx.doi.org/10.1016/j.infbeh.2023.101920}, DOI={10.1016/j.infbeh.2023.101920}, journal={Infant Behavior and Development}, publisher={Elsevier BV}, author={Beebe, Beatrice and Abdurokhmonova, Gavkhar and Lee, Sang Han and Dougalis, Georgios and Champagne, Frances and Rauh, Virginia and Algermissen, Molly and Herbstman, Julie and Margolis, Amy E.}, year={2024}, month=mar, pages={101920} }
 
- @article{2Handy_2023, title={Reduction in genital sexual arousal varies by type of oral contraceptive pill}, volume={20}, ISSN={1743-6109}, url={http://dx.doi.org/10.1093/jsxmed/qdad072}, DOI={10.1093/jsxmed/qdad072}, number={8}, journal={The Journal of Sexual Medicine}, publisher={Oxford University Press (OUP)}, author={Handy, Ariel B and McMahon, Leah N and Goldstein, Irwin and Meston, Cindy M}, year={2023}, month=jun, pages={1094–1102} }
+ @article{2Curley_2023, title={Shaping the development of complex social behavior}, volume={1530}, ISSN={1749-6632}, url={http://dx.doi.org/10.1111/nyas.15076}, DOI={10.1111/nyas.15076}, number={1}, journal={Annals of the New York Academy of Sciences}, publisher={Wiley}, author={Curley, James P. and Champagne, Frances A.}, year={2023}, month=oct, pages={46–63} }
 
- @article{3Sears_2022, title={A Multidimensional Evaluation of Intimacy}, volume={65}, ISSN={1778-3585}, url={http://dx.doi.org/10.1192/j.eurpsy.2022.2075}, DOI={10.1192/j.eurpsy.2022.2075}, number={S1}, journal={European Psychiatry}, publisher={Royal College of Psychiatrists}, author={Sears, M. and Mcmahon, L. and Crosby, C. and Freihart, B. and Meston, C.}, year={2022}, month=jun, pages={S802–S803} }
+ @article{3Lapp_2023, title={Automated maternal behavior during early life in rodents (AMBER) pipeline}, volume={13}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-023-45495-4}, DOI={10.1038/s41598-023-45495-4}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Lapp, Hannah E. and Salazar, Melissa G. and Champagne, Frances A.}, year={2023}, month=oct }
 
- @article{4Freihart_2022, title={Interpersonal autonomic synchrony and sexual satisfaction: A preliminary examination}, volume={65}, ISSN={1778-3585}, url={http://dx.doi.org/10.1192/j.eurpsy.2022.717}, DOI={10.1192/j.eurpsy.2022.717}, number={S1}, journal={European Psychiatry}, publisher={Royal College of Psychiatrists}, author={Freihart, B. and Sears, M. and Meston, C.}, year={2022}, month=jun, pages={S280–S280} }
+ @article{4Margolis_2023, title={Associations between prenatal exposure to second hand smoke and infant self-regulation in a New York city longitudinal prospective birth cohort}, volume={227}, ISSN={0013-9351}, url={http://dx.doi.org/10.1016/j.envres.2023.115652}, DOI={10.1016/j.envres.2023.115652}, journal={Environmental Research}, publisher={Elsevier BV}, author={Margolis, Amy E. and Lee, Sang Han and Liu, Ran and Goolsby, Lindsay and Champagne, Frances and Herbstman, Julie and Beebe, Beatrice}, year={2023}, month=jun, pages={115652} }
 
- @article{5Sears_Greer_2022, title={A Review of Undergraduate Student Disclosures of Sexual Violence}, volume={10}, ISSN={2050-0513}, url={http://dx.doi.org/10.1016/j.sxmr.2022.06.006}, DOI={10.1016/j.sxmr.2022.06.006}, number={4}, journal={Sexual Medicine Reviews}, publisher={Oxford University Press (OUP)}, author={Sears-Greer, Mackenzie A. and Friehart, Bridget K. and Meston, Cindy M.}, year={2022}, month=aug, pages={543–553} }
+ @article{5Wijenayake_2023, title={The contributions of parental lactation on offspring development: It’s not udder nonsense!}, volume={153}, ISSN={0018-506X}, url={http://dx.doi.org/10.1016/j.yhbeh.2023.105375}, DOI={10.1016/j.yhbeh.2023.105375}, journal={Hormones and Behavior}, publisher={Elsevier BV}, author={Wijenayake, Sanoji and Martz, Julia and Lapp, Hannah E. and Storm, Jasmyne A. and Champagne, Frances A. and Kentner, Amanda C.}, year={2023}, month=jul, pages={105375} }
 
- @article{6Mesk__2022, title={Why Hungarians Have Sex: Development and Validation of a Brief 15-Item Instrument (YSEX?-15H)}, volume={51}, ISSN={1573-2800}, url={http://dx.doi.org/10.1007/s10508-022-02380-x}, DOI={10.1007/s10508-022-02380-x}, number={8}, journal={Archives of Sexual Behavior}, publisher={Springer Science and Business Media LLC}, author={Meskó, Norbert and Zsidó, András N. and Birkás, Béla and Meston, Cindy M. and Buss, David M.}, year={2022}, month=aug, pages={4007–4022} }
+ @article{6Mashoodh_2023, title={Sex-specific effects of chronic paternal stress on offspring development are partially mediated via mothers}, volume={152}, ISSN={0018-506X}, url={http://dx.doi.org/10.1016/j.yhbeh.2023.105357}, DOI={10.1016/j.yhbeh.2023.105357}, journal={Hormones and Behavior}, publisher={Elsevier BV}, author={Mashoodh, Rahia and Habrylo, Ireneusz B. and Gudsnuk, Kathryn and Champagne, Frances A.}, year={2023}, month=jun, pages={105357} }
 
- @article{7Handy_2022, title={Local Responses to Genital Arousal — Mechanisms of Lubrication}, volume={14}, ISSN={1548-3592}, url={http://dx.doi.org/10.1007/s11930-022-00350-x}, DOI={10.1007/s11930-022-00350-x}, number={4}, journal={Current Sexual Health Reports}, publisher={Springer Science and Business Media LLC}, author={Handy, Ariel B. and McMahon, Leah N. and Meston, Cindy M.}, year={2022}, month=nov, pages={247–253} }
+ @article{7Firestein_2022, title={Hypertensive disorders during pregnancy and polycystic ovary syndrome are associated with child communication and social skills in a sex-specific and androgen-dependent manner}, volume={13}, ISSN={1664-2392}, url={http://dx.doi.org/10.3389/fendo.2022.1000732}, DOI={10.3389/fendo.2022.1000732}, journal={Frontiers in Endocrinology}, publisher={Frontiers Media SA}, author={Firestein, Morgan R. and Romeo, Russell D. and Winstead, Hailey and Goldman, Danielle A. and Grobman, William A. and Haas, David M. and Parry, Samuel and Reddy, Uma M. and Silver, Robert M. and Wapner, Ronald J. and Champagne, Frances A.}, year={2022}, month=sep }
 
- @article{8Mesk__2021, title={Why Hungarians Have Sex (YSEX?-HSF)}, volume={51}, ISSN={1573-2800}, url={http://dx.doi.org/10.1007/s10508-021-02072-y}, DOI={10.1007/s10508-021-02072-y}, number={1}, journal={Archives of Sexual Behavior}, publisher={Springer Science and Business Media LLC}, author={Meskó, Norbert and Szatmári, Dóra and Láng, András and Meston, Cindy M. and Buss, David M.}, year={2021}, month=nov, pages={465–489} }
+ @article{8Lapp_2022, title={Impact of a bisphenol A, F, and S mixture and maternal care on the brain transcriptome of rat dams and pups}, volume={93}, ISSN={0161-813X}, url={http://dx.doi.org/10.1016/j.neuro.2022.08.014}, DOI={10.1016/j.neuro.2022.08.014}, journal={NeuroToxicology}, publisher={Elsevier BV}, author={Lapp, H.E. and Margolis, A.E. and Champagne, F.A.}, year={2022}, month=dec, pages={22–36} }
 
- @article{9Crosby_2021, title={Corrigendum to “Sex, sexual arousal, and sexual decision making: An evolutionary perspective” [Personal. Individ. Differ., 177 (2021): 110826 Pages 1–5]}, volume={178}, ISSN={0191-8869}, url={http://dx.doi.org/10.1016/j.paid.2021.110908}, DOI={10.1016/j.paid.2021.110908}, journal={Personality and Individual Differences}, publisher={Elsevier BV}, author={Crosby, Courtney L. and Buss, David M. and Cormack, Lawrence K. and Meston, Cindy M.}, year={2021}, month=aug, pages={110908} }
+ @article{9Lee_2022, title={Distinct immune and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}, volume={103}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2022.04.015}, DOI={10.1016/j.bbi.2022.04.015}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={Lee, Won and Milewski, Tyler M. and Dwortz, Madeleine F. and Young, Rebecca L. and Gaudet, Andrew D. and Fonken, Laura K. and Champagne, Frances A. and Curley, James P.}, year={2022}, month=jul, pages={130–144} }
 
- @article{10Crosby_2021, title={Sex, sexual arousal, and sexual decision making: An evolutionary perspective}, volume={177}, ISSN={0191-8869}, url={http://dx.doi.org/10.1016/j.paid.2021.110826}, DOI={10.1016/j.paid.2021.110826}, journal={Personality and Individual Differences}, publisher={Elsevier BV}, author={Crosby, Courtney L. and Buss, David M. and Cormack, Lawrence K. and Meston, Cindy M.}, year={2021}, month=jul, pages={110826} }
+ @article{10Lee_2022, title={Social status mediated variation in hypothalamic transcriptional profiles of male mice}, volume={142}, ISSN={0018-506X}, url={http://dx.doi.org/10.1016/j.yhbeh.2022.105176}, DOI={10.1016/j.yhbeh.2022.105176}, journal={Hormones and Behavior}, publisher={Elsevier BV}, author={Lee, W. and Dwortz, M.F. and Milewski, T.M. and Champagne, F.A. and Curley, J.P.}, year={2022}, month=jun, pages={105176} }
 
- @article{11Kilimnik_2020, title={Sexual Shame in the Sexual Excitation and Inhibition Propensities of Men With and Without Nonconsensual Sexual Experiences}, volume={58}, ISSN={1559-8519}, url={http://dx.doi.org/10.1080/00224499.2020.1718585}, DOI={10.1080/00224499.2020.1718585}, number={2}, journal={The Journal of Sex Research}, publisher={Informa UK Limited}, author={Kilimnik, Chelsea D. and Meston, Cindy M.}, year={2020}, month=feb, pages={261–272} }
+ @article{11Margolis_2022, title={Convergent neural correlates of prenatal exposure to air pollution and behavioral phenotypes of risk for internalizing and externalizing problems: Potential biological and cognitive pathways}, volume={137}, ISSN={0149-7634}, url={http://dx.doi.org/10.1016/j.neubiorev.2022.104645}, DOI={10.1016/j.neubiorev.2022.104645}, journal={Neuroscience &amp; Biobehavioral Reviews}, publisher={Elsevier BV}, author={Margolis, Amy E. and Liu, Ran and Conceição, Vasco A. and Ramphal, Bruce and Pagliaccio, David and DeSerisy, Mariah L. and Koe, Emily and Selmanovic, Ena and Raudales, Amarelis and Emanet, Nur and Quinn, Aurabelle E. and Beebe, Beatrice and Pearson, Brandon L. and Herbstman, Julie B. and Rauh, Virginia A. and Fifer, William P. and Fox, Nathan A. and Champagne, Frances A.}, year={2022}, month=jun, pages={104645} }
 
-@Article{1,
-  title = {Handy, A., McMahon, L., Goldstein, I., & Meston, C. M. (2023). Reduction in genital sexual arousal varies by type of oral contraceptive pill },
-  author = {Cindy Meston},
-  journal = {Journal of Journal of Sexual Medicine (2023), 20(8):1094-1102. DOI: 10.1093/jsxmed/qdad072.},
-  year = {2023},
-}
-@Article{2,
-  title = {Physiological synchrony during partnered sexual activity.},
-  author = {Cindy Meston},
-  journal = {Meston, C. M., Freihart, B. K., Crosby, C. L., Stephenson, K. R. & Trapnell, P.D. (2023). Psychometric evaluation and adaptation of the Five-Factor Sexual Satisfaction Scale. Journal of Sex & Marital Therapy, 1-13. },
-  year = {2023},
-}
+ @article{12Fuentes_2022, title={Experience-Regulated Neuronal Signaling in Maternal Behavior}, volume={15}, ISSN={1662-5099}, url={http://dx.doi.org/10.3389/fnmol.2022.844295}, DOI={10.3389/fnmol.2022.844295}, journal={Frontiers in Molecular Neuroscience}, publisher={Frontiers Media SA}, author={Fuentes, Ileana and Morishita, Yoshikazu and Gonzalez-Salinas, Sofia and Champagne, Frances A. and Uchida, Shusaku and Shumyatsky, Gleb P.}, year={2022}, month=mar }
+
+ @article{13Firestein_2022, title={Elevated prenatal maternal sex hormones, but not placental aromatase, are associated with child neurodevelopment}, volume={140}, ISSN={0018-506X}, url={http://dx.doi.org/10.1016/j.yhbeh.2022.105125}, DOI={10.1016/j.yhbeh.2022.105125}, journal={Hormones and Behavior}, publisher={Elsevier BV}, author={Firestein, Morgan R. and Romeo, Russell D. and Winstead, Hailey and Goldman, Danielle A. and Grobman, William A. and Haas, David and Mercer, Brian and Parker, Corette and Parry, Samuel and Reddy, Uma and Silver, Robert and Simhan, Hyagriv and Wapner, Ronald J. and Champagne, Frances A.}, year={2022}, month=apr, pages={105125} }
+
+ @article{14Milewski_2022, title={Behavioural and physiological plasticity in social hierarchies}, volume={377}, ISSN={1471-2970}, url={http://dx.doi.org/10.1098/rstb.2020.0443}, DOI={10.1098/rstb.2020.0443}, number={1845}, journal={Philosophical Transactions of the Royal Society B: Biological Sciences}, publisher={The Royal Society}, author={Milewski, T. M. and Lee, W. and Champagne, F. A. and Curley, J. P.}, year={2022}, month=jan }
+
+ @article{15Trumpff_2021, title={Added sugar intake during pregnancy: Fetal behavior, birth outcomes, and placental DNA methylation}, volume={63}, ISSN={1098-2302}, url={http://dx.doi.org/10.1002/dev.22088}, DOI={10.1002/dev.22088}, number={5}, journal={Developmental Psychobiology}, publisher={Wiley}, author={Trumpff, Caroline and Sturm, Gabriel and Picard, Martin and Foss, Sophie and Lee, Seonjoo and Feng, Tianshu and Cardenas, Andrès and McCormack, Clare and Champagne, Frances A. and Monk, Catherine}, year={2021}, month=jan, pages={878–889} }
+
+ @article{16McCormack_2021, title={Maternal childhood adversity and inflammation during pregnancy: Interactions with diet quality and depressive symptoms}, volume={91}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2020.09.023}, DOI={10.1016/j.bbi.2020.09.023}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={McCormack, Clare and Lauriola, Vincenzo and Feng, Tianshu and Lee, Seonjoo and Spann, Marisa and Mitchell, Anika and Champagne, Frances and Monk, Catherine}, year={2021}, month=jan, pages={172–180} }
+
