--- a/preprints.bib
+++ b/preprints.bib
@@ -1,2 +1,8 @@
- @article{1Ashokkumar_2022, title={Restoring Honor by Slapping or  Disowning the Daughter}, url={http://dx.doi.org/10.31234/osf.io/xzr3u}, DOI={10.31234/osf.io/xzr3u}, publisher={Center for Open Science}, author={Ashokkumar, Ashwini and Swann, William B.}, year={2022}, month=mar }
+ @article{1Lauby_2023, title={Postnatal maternal care moderates the effects of prenatal bisphenol exposure on offspring neurodevelopmental, behavioral, and transcriptomic outcomes}, url={http://dx.doi.org/10.1101/2023.09.19.558481}, DOI={10.1101/2023.09.19.558481}, publisher={Cold Spring Harbor Laboratory}, author={Lauby, Samantha C. and Lapp, Hannah E. and Salazar, Melissa and Semyrenko, Sofiia and Chauhan, Danyal and Margolis, Amy E. and Champagne, Frances A.}, year={2023}, month=sep }
+
+ @article{2Lapp_2023, title={Automated Maternal Behavior during Early life in Rodents (AMBER) pipeline}, url={http://dx.doi.org/10.1101/2023.09.15.557946}, DOI={10.1101/2023.09.15.557946}, publisher={Cold Spring Harbor Laboratory}, author={Lapp, Hannah E. and Salazar, Melissa G. and Champagne, Frances A.}, year={2023}, month=sep }
+
+ @article{3Mashoodh_2022, title={Sex-specific effects of chronic paternal stress on offspring development are partially mediated via mothers}, url={http://dx.doi.org/10.1101/2022.03.25.485798}, DOI={10.1101/2022.03.25.485798}, publisher={Cold Spring Harbor Laboratory}, author={Mashoodh, Rahia and Habrylo, Ireneusz B. and Gudsnuk, Kathryn and Champagne, Frances A.}, year={2022}, month=mar }
+
+ @article{4Lee_2021, title={Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}, url={http://dx.doi.org/10.1101/2021.09.04.458987}, DOI={10.1101/2021.09.04.458987}, publisher={Cold Spring Harbor Laboratory}, author={Lee, Won and Milewski, Tyler M. and Dwortz, Madeleine F. and Young, Rebecca L. and Gaudet, Andrew D. and Fonken, Laura K. and Champagne, Frances A. and Curley, James P.}, year={2021}, month=sep }
 
