--- a/preprints.bib
+++ b/preprints.bib
@@ -1,8 +1,12 @@
- @article{1Lauby_2023, title={Postnatal maternal care moderates the effects of prenatal bisphenol exposure on offspring neurodevelopmental, behavioral, and transcriptomic outcomes}, url={http://dx.doi.org/10.1101/2023.09.19.558481}, DOI={10.1101/2023.09.19.558481}, publisher={Cold Spring Harbor Laboratory}, author={Lauby, Samantha C. and Lapp, Hannah E. and Salazar, Melissa and Semyrenko, Sofiia and Chauhan, Danyal and Margolis, Amy E. and Champagne, Frances A.}, year={2023}, month=sep }
+ @article{1Murphy_2023, title={Transfer of Statistical Learning from Passive Speech Perception to Speech Production}, url={http://dx.doi.org/10.31234/osf.io/wtpdz}, DOI={10.31234/osf.io/wtpdz}, publisher={Center for Open Science}, author={Murphy, Timothy and Holt, Lori L. and Nozari, Nazbanou}, year={2023}, month=jan }
 
- @article{2Lapp_2023, title={Automated Maternal Behavior during Early life in Rodents (AMBER) pipeline}, url={http://dx.doi.org/10.1101/2023.09.15.557946}, DOI={10.1101/2023.09.15.557946}, publisher={Cold Spring Harbor Laboratory}, author={Lapp, Hannah E. and Salazar, Melissa G. and Champagne, Frances A.}, year={2023}, month=sep }
+ @article{2Vissani_2023, title={Speech induces spatiotemporal and frequency specific subthalamic-cortical spike-phase coupling events}, url={http://dx.doi.org/10.1101/2023.10.18.562969}, DOI={10.1101/2023.10.18.562969}, publisher={Cold Spring Harbor Laboratory}, author={Vissani, Matteo and Bush, Alan and Lipski, Witold J. and Fischer, Petra and Neudorfer, Clemens and Holt, Lori L. and Fiez, Julie A. and Turner, Robert S. and Richardson, R. Mark}, year={2023}, month=oct }
 
- @article{3Mashoodh_2022, title={Sex-specific effects of chronic paternal stress on offspring development are partially mediated via mothers}, url={http://dx.doi.org/10.1101/2022.03.25.485798}, DOI={10.1101/2022.03.25.485798}, publisher={Cold Spring Harbor Laboratory}, author={Mashoodh, Rahia and Habrylo, Ireneusz B. and Gudsnuk, Kathryn and Champagne, Frances A.}, year={2022}, month=mar }
+ @article{3Hodson_2022, title={Statistical learning across passive listening adjusts perceptual weights of speech input dimensions}, url={http://dx.doi.org/10.31234/osf.io/4kxz3}, DOI={10.31234/osf.io/4kxz3}, publisher={Center for Open Science}, author={Hodson, Alana J. and Shinn-Cunningham, Barbara and Holt, Lori L.}, year={2022}, month=nov }
 
- @article{4Lee_2021, title={Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}, url={http://dx.doi.org/10.1101/2021.09.04.458987}, DOI={10.1101/2021.09.04.458987}, publisher={Cold Spring Harbor Laboratory}, author={Lee, Won and Milewski, Tyler M. and Dwortz, Madeleine F. and Young, Rebecca L. and Gaudet, Andrew D. and Fonken, Laura K. and Champagne, Frances A. and Curley, James P.}, year={2021}, month=sep }
+ @article{4Obasih_2022, title={Auditory category learning is robust across training regimes}, url={http://dx.doi.org/10.31234/osf.io/ygwhd}, DOI={10.31234/osf.io/ygwhd}, publisher={Center for Open Science}, author={Obasih, Chisom Obiamalu and Luthra, Sahil and Dick, Frederic and Holt, Lori L.}, year={2022}, month=oct }
+
+ @article{5Wu_2022, title={Auditory cortical responses to speech are shaped by statistical learning of short-term speech input regularities}, url={http://dx.doi.org/10.1101/2022.12.19.520832}, DOI={10.1101/2022.12.19.520832}, publisher={Cold Spring Harbor Laboratory}, author={Wu, Yunan Charles and Viswanathan, Vibha and Abel, Taylor J. and Holt, Lori L.}, year={2022}, month=dec }
+
+ @article{6Smith_2022, title={A one-man bilingual cocktail party: Linguistic and non-linguistic effects on bilinguals’ speech comprehension in Mandarin and English}, url={http://dx.doi.org/10.31234/osf.io/k8rzt}, DOI={10.31234/osf.io/k8rzt}, publisher={Center for Open Science}, author={Smith, Erin and Holt, Lori L. and Dick, Frederic}, year={2022}, month=oct }
 
