--- a/pubs.bib
+++ b/pubs.bib
@@ -1,32 +1,40 @@
- @article{1Beebe_2024, title={Mother-infant self- and interactive contingency at four months and infant cognition at one year: A view from microanalysis}, volume={74}, ISSN={0163-6383}, url={http://dx.doi.org/10.1016/j.infbeh.2023.101920}, DOI={10.1016/j.infbeh.2023.101920}, journal={Infant Behavior and Development}, publisher={Elsevier BV}, author={Beebe, Beatrice and Abdurokhmonova, Gavkhar and Lee, Sang Han and Dougalis, Georgios and Champagne, Frances and Rauh, Virginia and Algermissen, Molly and Herbstman, Julie and Margolis, Amy E.}, year={2024}, month=mar, pages={101920} }
+ @article{1Murphy_2023, title={Transfer of statistical learning from passive speech perception to speech production}, ISSN={1531-5320}, url={http://dx.doi.org/10.3758/s13423-023-02399-8}, DOI={10.3758/s13423-023-02399-8}, journal={Psychonomic Bulletin &amp; Review}, publisher={Springer Science and Business Media LLC}, author={Murphy, Timothy K. and Nozari, Nazbanou and Holt, Lori L.}, year={2023}, month=oct }
 
- @article{2Curley_2023, title={Shaping the development of complex social behavior}, volume={1530}, ISSN={1749-6632}, url={http://dx.doi.org/10.1111/nyas.15076}, DOI={10.1111/nyas.15076}, number={1}, journal={Annals of the New York Academy of Sciences}, publisher={Wiley}, author={Curley, James P. and Champagne, Frances A.}, year={2023}, month=oct, pages={46–63} }
+ @article{2Symons_2023, title={Informational masking influences segmental and suprasegmental speech categorization}, ISSN={1531-5320}, url={http://dx.doi.org/10.3758/s13423-023-02364-5}, DOI={10.3758/s13423-023-02364-5}, journal={Psychonomic Bulletin &amp; Review}, publisher={Springer Science and Business Media LLC}, author={Symons, A. E. and Holt, L. L. and Tierney, A. T.}, year={2023}, month=sep }
 
- @article{3Lapp_2023, title={Automated maternal behavior during early life in rodents (AMBER) pipeline}, volume={13}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-023-45495-4}, DOI={10.1038/s41598-023-45495-4}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Lapp, Hannah E. and Salazar, Melissa G. and Champagne, Frances A.}, year={2023}, month=oct }
+ @article{3Obasih_2023, title={Auditory category learning is robust across training regimes}, volume={237}, ISSN={0010-0277}, url={http://dx.doi.org/10.1016/j.cognition.2023.105467}, DOI={10.1016/j.cognition.2023.105467}, journal={Cognition}, publisher={Elsevier BV}, author={Obasih, Chisom O. and Luthra, Sahil and Dick, Frederic and Holt, Lori L.}, year={2023}, month=aug, pages={105467} }
 
- @article{4Margolis_2023, title={Associations between prenatal exposure to second hand smoke and infant self-regulation in a New York city longitudinal prospective birth cohort}, volume={227}, ISSN={0013-9351}, url={http://dx.doi.org/10.1016/j.envres.2023.115652}, DOI={10.1016/j.envres.2023.115652}, journal={Environmental Research}, publisher={Elsevier BV}, author={Margolis, Amy E. and Lee, Sang Han and Liu, Ran and Goolsby, Lindsay and Champagne, Frances and Herbstman, Julie and Beebe, Beatrice}, year={2023}, month=jun, pages={115652} }
+ @article{4Gabay_2023, title={Impaired and Spared Auditory Category Learning in Developmental Dyslexia}, volume={34}, ISSN={1467-9280}, url={http://dx.doi.org/10.1177/09567976231151581}, DOI={10.1177/09567976231151581}, number={4}, journal={Psychological Science}, publisher={SAGE Publications}, author={Gabay, Yafit and Roark, Casey L. and Holt, Lori L.}, year={2023}, month=feb, pages={468–480} }
 
- @article{5Wijenayake_2023, title={The contributions of parental lactation on offspring development: It’s not udder nonsense!}, volume={153}, ISSN={0018-506X}, url={http://dx.doi.org/10.1016/j.yhbeh.2023.105375}, DOI={10.1016/j.yhbeh.2023.105375}, journal={Hormones and Behavior}, publisher={Elsevier BV}, author={Wijenayake, Sanoji and Martz, Julia and Lapp, Hannah E. and Storm, Jasmyne A. and Champagne, Frances A. and Kentner, Amanda C.}, year={2023}, month=jul, pages={105375} }
+ @article{5Gabay_2023, title={Memory for incidentally learned categories evolves in the post-learning interval}, volume={12}, ISSN={2050-084X}, url={http://dx.doi.org/10.7554/elife.81855}, DOI={10.7554/elife.81855}, journal={eLife}, publisher={eLife Sciences Publications, Ltd}, author={Gabay, Yafit and Karni, Avi and Holt, Lori L}, year={2023}, month=mar }
 
- @article{6Mashoodh_2023, title={Sex-specific effects of chronic paternal stress on offspring development are partially mediated via mothers}, volume={152}, ISSN={0018-506X}, url={http://dx.doi.org/10.1016/j.yhbeh.2023.105357}, DOI={10.1016/j.yhbeh.2023.105357}, journal={Hormones and Behavior}, publisher={Elsevier BV}, author={Mashoodh, Rahia and Habrylo, Ireneusz B. and Gudsnuk, Kathryn and Champagne, Frances A.}, year={2023}, month=jun, pages={105357} }
+ @article{6Gabay_2022, title={Incidental auditory category learning and visuomotor sequence learning do not compete for cognitive resources}, volume={85}, ISSN={1943-393X}, url={http://dx.doi.org/10.3758/s13414-022-02616-x}, DOI={10.3758/s13414-022-02616-x}, number={2}, journal={Attention, Perception, &amp; Psychophysics}, publisher={Springer Science and Business Media LLC}, author={Gabay, Yafit and Madlansacay, Michelle and Holt, Lori L.}, year={2022}, month=dec, pages={452–462} }
 
- @article{7Firestein_2022, title={Hypertensive disorders during pregnancy and polycystic ovary syndrome are associated with child communication and social skills in a sex-specific and androgen-dependent manner}, volume={13}, ISSN={1664-2392}, url={http://dx.doi.org/10.3389/fendo.2022.1000732}, DOI={10.3389/fendo.2022.1000732}, journal={Frontiers in Endocrinology}, publisher={Frontiers Media SA}, author={Firestein, Morgan R. and Romeo, Russell D. and Winstead, Hailey and Goldman, Danielle A. and Grobman, William A. and Haas, David M. and Parry, Samuel and Reddy, Uma M. and Silver, Robert M. and Wapner, Ronald J. and Champagne, Frances A.}, year={2022}, month=sep }
+ @article{7Jasmin_2022, title={Short-term perceptual reweighting in suprasegmental categorization}, volume={30}, ISSN={1531-5320}, url={http://dx.doi.org/10.3758/s13423-022-02146-5}, DOI={10.3758/s13423-022-02146-5}, number={1}, journal={Psychonomic Bulletin &amp; Review}, publisher={Springer Science and Business Media LLC}, author={Jasmin, Kyle and Tierney, Adam and Obasih, Chisom and Holt, Lori}, year={2022}, month=aug, pages={373–382} }
 
- @article{8Lapp_2022, title={Impact of a bisphenol A, F, and S mixture and maternal care on the brain transcriptome of rat dams and pups}, volume={93}, ISSN={0161-813X}, url={http://dx.doi.org/10.1016/j.neuro.2022.08.014}, DOI={10.1016/j.neuro.2022.08.014}, journal={NeuroToxicology}, publisher={Elsevier BV}, author={Lapp, H.E. and Margolis, A.E. and Champagne, F.A.}, year={2022}, month=dec, pages={22–36} }
+ @article{8Roark_2022, title={Long-term priors constrain category learning in the context of short-term statistical regularities}, volume={29}, ISSN={1531-5320}, url={http://dx.doi.org/10.3758/s13423-022-02114-z}, DOI={10.3758/s13423-022-02114-z}, number={5}, journal={Psychonomic Bulletin &amp; Review}, publisher={Springer Science and Business Media LLC}, author={Roark, Casey L. and Holt, Lori L.}, year={2022}, month=may, pages={1925–1937} }
 
- @article{9Lee_2022, title={Distinct immune and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}, volume={103}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2022.04.015}, DOI={10.1016/j.bbi.2022.04.015}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={Lee, Won and Milewski, Tyler M. and Dwortz, Madeleine F. and Young, Rebecca L. and Gaudet, Andrew D. and Fonken, Laura K. and Champagne, Frances A. and Curley, James P.}, year={2022}, month=jul, pages={130–144} }
+ @article{9Wu_2022, title={Phonetic category activation predicts the direction and magnitude of perceptual adaptation to accented speech.}, volume={48}, ISSN={0096-1523}, url={http://dx.doi.org/10.1037/xhp0001037}, DOI={10.1037/xhp0001037}, number={9}, journal={Journal of Experimental Psychology: Human Perception and Performance}, publisher={American Psychological Association (APA)}, author={Wu, Yunan Charles and Holt, Lori L.}, year={2022}, month=sep, pages={913–925} }
 
- @article{10Lee_2022, title={Social status mediated variation in hypothalamic transcriptional profiles of male mice}, volume={142}, ISSN={0018-506X}, url={http://dx.doi.org/10.1016/j.yhbeh.2022.105176}, DOI={10.1016/j.yhbeh.2022.105176}, journal={Hormones and Behavior}, publisher={Elsevier BV}, author={Lee, W. and Dwortz, M.F. and Milewski, T.M. and Champagne, F.A. and Curley, J.P.}, year={2022}, month=jun, pages={105176} }
+ @article{10Rupp_2022, title={Neural responses in human superior temporal cortex support coding of voice representations}, volume={20}, ISSN={1545-7885}, url={http://dx.doi.org/10.1371/journal.pbio.3001675}, DOI={10.1371/journal.pbio.3001675}, number={7}, journal={PLOS Biology}, publisher={Public Library of Science (PLoS)}, author={Rupp, Kyle and Hect, Jasmine L. and Remick, Madison and Ghuman, Avniel and Chandrasekaran, Bharath and Holt, Lori L. and Abel, Taylor J.}, editor={Poeppel, David}, year={2022}, month=jul, pages={e3001675} }
 
- @article{11Margolis_2022, title={Convergent neural correlates of prenatal exposure to air pollution and behavioral phenotypes of risk for internalizing and externalizing problems: Potential biological and cognitive pathways}, volume={137}, ISSN={0149-7634}, url={http://dx.doi.org/10.1016/j.neubiorev.2022.104645}, DOI={10.1016/j.neubiorev.2022.104645}, journal={Neuroscience &amp; Biobehavioral Reviews}, publisher={Elsevier BV}, author={Margolis, Amy E. and Liu, Ran and Conceição, Vasco A. and Ramphal, Bruce and Pagliaccio, David and DeSerisy, Mariah L. and Koe, Emily and Selmanovic, Ena and Raudales, Amarelis and Emanet, Nur and Quinn, Aurabelle E. and Beebe, Beatrice and Pearson, Brandon L. and Herbstman, Julie B. and Rauh, Virginia A. and Fifer, William P. and Fox, Nathan A. and Champagne, Frances A.}, year={2022}, month=jun, pages={104645} }
+ @article{11Roark_2022, title={The representational glue for incidental category learning is alignment with task-relevant behavior.}, volume={48}, ISSN={0278-7393}, url={http://dx.doi.org/10.1037/xlm0001078}, DOI={10.1037/xlm0001078}, number={6}, journal={Journal of Experimental Psychology: Learning, Memory, and Cognition}, publisher={American Psychological Association (APA)}, author={Roark, Casey L. and Lehet, Matthew I. and Dick, Frederic and Holt, Lori L.}, year={2022}, month=jun, pages={769–784} }
 
- @article{12Fuentes_2022, title={Experience-Regulated Neuronal Signaling in Maternal Behavior}, volume={15}, ISSN={1662-5099}, url={http://dx.doi.org/10.3389/fnmol.2022.844295}, DOI={10.3389/fnmol.2022.844295}, journal={Frontiers in Molecular Neuroscience}, publisher={Frontiers Media SA}, author={Fuentes, Ileana and Morishita, Yoshikazu and Gonzalez-Salinas, Sofia and Champagne, Frances A. and Uchida, Shusaku and Shumyatsky, Gleb P.}, year={2022}, month=mar }
+ @article{12Caras_2022, title={Non-sensory Influences on Auditory Learning and Plasticity}, volume={23}, ISSN={1438-7573}, url={http://dx.doi.org/10.1007/s10162-022-00837-3}, DOI={10.1007/s10162-022-00837-3}, number={2}, journal={Journal of the Association for Research in Otolaryngology}, publisher={Springer Science and Business Media LLC}, author={Caras, Melissa L. and Happel, Max F. K. and Chandrasekaran, Bharath and Ripollés, Pablo and Keesom, Sarah M. and Hurley, Laura M. and Remage-Healey, Luke and Holt, Lori L. and Wright, Beverly A.}, year={2022}, month=mar, pages={151–166} }
 
- @article{13Firestein_2022, title={Elevated prenatal maternal sex hormones, but not placental aromatase, are associated with child neurodevelopment}, volume={140}, ISSN={0018-506X}, url={http://dx.doi.org/10.1016/j.yhbeh.2022.105125}, DOI={10.1016/j.yhbeh.2022.105125}, journal={Hormones and Behavior}, publisher={Elsevier BV}, author={Firestein, Morgan R. and Romeo, Russell D. and Winstead, Hailey and Goldman, Danielle A. and Grobman, William A. and Haas, David and Mercer, Brian and Parker, Corette and Parry, Samuel and Reddy, Uma and Silver, Robert and Simhan, Hyagriv and Wapner, Ronald J. and Champagne, Frances A.}, year={2022}, month=apr, pages={105125} }
+ @article{13Dastolfo_Hromack_2021, title={Articulatory Gain Predicts Motor Cortex and Subthalamic Nucleus Activity During Speech}, volume={32}, ISSN={1460-2199}, url={http://dx.doi.org/10.1093/cercor/bhab251}, DOI={10.1093/cercor/bhab251}, number={7}, journal={Cerebral Cortex}, publisher={Oxford University Press (OUP)}, author={Dastolfo-Hromack, C and Bush, A and Chrabaszcz, A and Alhourani, A and Lipski, W and Wang, D and Crammond, D J and Shaiman, S and Dickey, M W and Holt, L L and Turner, R S and Fiez, J A and Richardson, R M}, year={2021}, month=sep, pages={1337–1349} }
 
- @article{14Milewski_2022, title={Behavioural and physiological plasticity in social hierarchies}, volume={377}, ISSN={1471-2970}, url={http://dx.doi.org/10.1098/rstb.2020.0443}, DOI={10.1098/rstb.2020.0443}, number={1845}, journal={Philosophical Transactions of the Royal Society B: Biological Sciences}, publisher={The Royal Society}, author={Milewski, T. M. and Lee, W. and Champagne, F. A. and Curley, J. P.}, year={2022}, month=jan }
+ @article{14Zhang_2022, title={Adjustment of cue weighting in speech by speakers and listeners: Evidence from amplitude and duration modifications of Mandarin Chinese tone}, volume={151}, ISSN={1520-8524}, url={http://dx.doi.org/10.1121/10.0009378}, DOI={10.1121/10.0009378}, number={2}, journal={The Journal of the Acoustical Society of America}, publisher={Acoustical Society of America (ASA)}, author={Zhang, Hui and Wiener, Seth and Holt, Lori L.}, year={2022}, month=feb, pages={992–1005} }
 
- @article{15Trumpff_2021, title={Added sugar intake during pregnancy: Fetal behavior, birth outcomes, and placental DNA methylation}, volume={63}, ISSN={1098-2302}, url={http://dx.doi.org/10.1002/dev.22088}, DOI={10.1002/dev.22088}, number={5}, journal={Developmental Psychobiology}, publisher={Wiley}, author={Trumpff, Caroline and Sturm, Gabriel and Picard, Martin and Foss, Sophie and Lee, Seonjoo and Feng, Tianshu and Cardenas, Andrès and McCormack, Clare and Champagne, Frances A. and Monk, Catherine}, year={2021}, month=jan, pages={878–889} }
+ @article{15DiNino_2021, title={Cutting Through the Noise: Noise-Induced Cochlear Synaptopathy and Individual Differences in Speech Understanding Among Listeners With Normal Audiograms}, volume={43}, ISSN={1538-4667}, url={http://dx.doi.org/10.1097/aud.0000000000001147}, DOI={10.1097/aud.0000000000001147}, number={1}, journal={Ear &amp; Hearing}, publisher={Ovid Technologies (Wolters Kluwer Health)}, author={DiNino, Mishaela and Holt, Lori L. and Shinn-Cunningham, Barbara G.}, year={2021}, month=nov, pages={9–22} }
 
- @article{16McCormack_2021, title={Maternal childhood adversity and inflammation during pregnancy: Interactions with diet quality and depressive symptoms}, volume={91}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2020.09.023}, DOI={10.1016/j.bbi.2020.09.023}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={McCormack, Clare and Lauriola, Vincenzo and Feng, Tianshu and Lee, Seonjoo and Spann, Marisa and Mitchell, Anika and Champagne, Frances and Monk, Catherine}, year={2021}, month=jan, pages={172–180} }
+ @article{16Zhao_2022, title={Robust and Efficient Online Auditory Psychophysics}, volume={26}, ISSN={2331-2165}, url={http://dx.doi.org/10.1177/23312165221118792}, DOI={10.1177/23312165221118792}, journal={Trends in Hearing}, publisher={SAGE Publications}, author={Zhao, Sijia and Brown, Christopher A. and Holt, Lori L. and Dick, Frederic}, year={2022}, month=jan, pages={233121652211187} }
+
+ @article{17Chrabaszcz_2021, title={Simultaneously recorded subthalamic and cortical LFPs reveal different lexicality effects during reading aloud}, volume={60}, ISSN={0911-6044}, url={http://dx.doi.org/10.1016/j.jneuroling.2021.101019}, DOI={10.1016/j.jneuroling.2021.101019}, journal={Journal of Neurolinguistics}, publisher={Elsevier BV}, author={Chrabaszcz, A. and Wang, D. and Lipski, W.J. and Bush, A. and Crammond, D.J. and Shaiman, S. and Dickey, M.W. and Holt, L.L. and Turner, R.S. and Fiez, J.A. and Richardson, R.M.}, year={2021}, month=nov, pages={101019} }
+
+ @article{18Zhang_2021, title={The Learning Signal in Perceptual Tuning of Speech: Bottom Up Versus Top‐Down Information}, volume={45}, ISSN={1551-6709}, url={http://dx.doi.org/10.1111/cogs.12947}, DOI={10.1111/cogs.12947}, number={3}, journal={Cognitive Science}, publisher={Wiley}, author={Zhang, Xujin and Wu, Yunan Charles and Holt, Lori L.}, year={2021}, month=mar }
+
+ @article{19Gabay_2020, title={Adaptive Plasticity Under Adverse Listening Conditions is Disrupted in Developmental Dyslexia}, volume={27}, ISSN={1469-7661}, url={http://dx.doi.org/10.1017/s1355617720000661}, DOI={10.1017/s1355617720000661}, number={1}, journal={Journal of the International Neuropsychological Society}, publisher={Cambridge University Press (CUP)}, author={Gabay, Yafit and Holt, Lori L.}, year={2020}, month=aug, pages={12–22} }
+
+ @article{20Laffere_2021, title={Attentional modulation of neural entrainment to sound streams in children with and without ADHD}, volume={224}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2020.117396}, DOI={10.1016/j.neuroimage.2020.117396}, journal={NeuroImage}, publisher={Elsevier BV}, author={Laffere, Aeron and Dick, Fred and Holt, Lori L and Tierney, Adam}, year={2021}, month=jan, pages={117396} }
 
